--- a/project1/.gitignore
+++ b/project1/.gitignore
@@ -1,7 +1,12 @@
 ### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+
 
 ### Eclipse ###
 .apt_generated
@@ -27,3 +32,4 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
